fix currencies bug, fix country details overflow

--- a/src/scss/layout/countryDetailed.scss
+++ b/src/scss/layout/countryDetailed.scss
@@ -20,6 +20,10 @@
     position: sticky;
     top: 67px;
     left: 0;
+    @media (max-width: 991px) {
+      position: absolute;
+      top: 2px;
+    }
   }
   .back {
     padding-top: 25px;
@@ -103,6 +107,7 @@
         display: flex;
         gap: 10px;
         align-items: center;
+        flex-wrap: wrap;
         @media (max-width: 767px) {
           text-align: left;
         }
